delete section from homepage, fix broken images

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
      <div id="main-content-service-cards-new-construction" class="hidden">
       <div class="service-card mr-20">
         <div class="service-card-header">
-          <h3><a href="/shed-homes-shouses.html">New Construction Link 1</a></h3>
+          <h3><a href="#">Home Additions</a></h3>
         </div>
         <div class="service-card-image">
           <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Shed Houses">
@@ -116,20 +116,12 @@
       </div>
       <div class="service-card mr-20">
         <div class="service-card-header">
-          <h3><a href="/Agriculture-commercial-buildings.html">New Construction Link 2</a></h3>
+          <h3><a href="/shed-homes-shouses.html">Shed Houses</a></h3>
         </div>
         <div class="service-card-image">
           <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/farm-shed.png" alt="Agricultural & Commrcial Buidings">
         </div>
-      </div>
-      <div class="service-card">
-        <div class="service-card-header">
-          <h3><a href="/event-venues.html">New Construction Link 2</a></h3>
-        </div>
-        <div class="service-card-image">
-          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-1.png" alt="Event Venues">
-        </div>
-      </div>  
+      </div> 
      </div> 
   <section id="below-main-content-section">
     <div class="below-main-content">
@@ -214,34 +206,6 @@
         </div>
       </div>
     </div>
-  </section>
-  <section class="gradient-banner">
-    <div class="gradient-content">
-      <span>
-        Family owned business serving with pride. A local business you can trust.
-      </span>
-      <div class="triangle"></div>
-      <a class="btn btn-secondary">Get an Estimate</a>
-    </div>
-  </section>
-  <section id="choose-team-builders">
-    <h1>3 Reasons to Choose T.E.A.M. Builders Ltd.</h1>
-    <p>T.E.A.M. Builders Ltd. is home to one of the top remodeling contractors in Cedar Falls, IA. We make it easy to give your house a makeover. When you hire us, you'll get:</p>
-    <div id="three-reasons">
-      <div class="reason">
-        <h5>1. A free estimate from a dependable contractor</h5>
-        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/dependable-contractor.png">
-      </div>
-      <div class="reason" id="flip">
-        <h5>2. Service tailored to fit your needs, schedule, and budget</h5>
-        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/tailored-service.png">
-      </div>
-      <div class="reason">
-        <h5>3. Access to high quality parts to help your house</h5>
-        <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/high-quality-parts.png">
-      </div>
-    </div>
-    <p style="text-align: center;">Don't delay your project any longer. Contact us today to get your free estimate from a home remodeler in Cedar Falls, IA.</p>
   </section>
   <section class="gradient-banner">
      <div class="gradient-content">
