--- a/our-work.html
+++ b/our-work.html
@@ -38,17 +38,17 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Basement Renovations</div>
               <div data-content>
-                <img src="/images/work/basement-renovations/basement-renovation.png" alt="Basement Renovation">
-                <img src="/images/work/basement-renovations/Stairs-Inside.jpg" alt="Basement Renovation Flooring and Stairs">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Basement Renovation">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Basement Renovation Flooring and Stairs">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Kitchen Renovations</div>
               <div data-content>
-                <img src="/images/work/kitchen-renovations/kitchen-renovation-island.jpg" alt="Kitchen Renovation Island">
-                <img src="/images/work/kitchen-renovations/kitchen5.jpg" alt="Kitchen Renovation Island">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpeg" alt="Kitchen Renovation Island">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Kitchen Renovation Island">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/TEAM2.jpg" alt="Full Service Kitchen Renovation">
-                <img src="/images/work/kitchen-renovations/Grundy-2.jpg" alt="Before & After Kitchen">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Before & After Kitchen">
               </div>
             </div>
           </div>
@@ -61,7 +61,7 @@
             <div class="our-work-accordion" data-accordion>
               <div data-control>Fences</div>
               <div data-content>
-                <img src="/images/work/fencing/fence.png" alt="Fence">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Fence">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/final-fence.png" alt="Final Fence">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/nichols-fence.png" alt="Nichols Fence">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/1557250048495_fence_4.png" alt="Fence">
@@ -70,42 +70,42 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Roofing</div>
               <div data-content>
-                <img src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Clay Roof">
-                <img src="/images/work/roofing/r-1.jpg" alt="Roof 1">
-                <img src="/images/work/roofing/r-2.jpg" alt="Roof 2">
-                <img src="/images/work/roofing/r-3.jpg" alt="Roof 3">
-                <img src="/images/work/roofing/Roofing_1.jpg" alt="Roof 4">
-                <img src="/images/work/roofing/Roofing_4.png" alt="Roof 5">
-                <img src="/images/work/roofing/DJI_0220.JPG" alt="Roof 6">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG" alt="Clay Roof">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Roof 1">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen5.jpg" alt="Roof 2">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/r-3.jpg" alt="Roof 3">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roof 4">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roof 5">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Roof 6">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Decks</div>
               <div data-content>
-                <img src="/images/work/decks/DJI_0140.JPG" alt="New Deck Renovation">
-                <img src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Overhead View of Deck">
-                <img src="/images/work/decks/IMG_0574.JPG" alt="Porch Deck">
-                <img src="/images/work/decks/Night-1.jpg" alt="Night View of Deck">
-                <img src="/images/work/decks/pp13.jpg" alt="Large Backyard Multilevel Deck">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="New Deck Renovation">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Overhead View of Deck">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Porch Deck">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Night View of Deck">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Large Backyard Multilevel Deck">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Pergolas</div>
               <div data-content>
-                <img src="/images/work/pergolas/p10.jpg" alt="Wood Home Pergola">
-                <img src="/images/work/pergolas/p4.jpg" alt="Pergola with Shingles">
-                <img src="/images/work/pergolas/p12.jpg" alt="Wood Home Pergola">
-                <img src="/images/work/pergolas/p20.jpg" alt="Pergola with Metal Base">
-                <img src="/images/work/pergolas/p19.jpg" alt="Pergola with Metal Base">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Wood Home Pergola">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Pergola with Shingles">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Wood Home Pergola">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Pergola with Metal Base">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Pergola with Metal Base">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Siding</div>
               <div data-content>
-                <img src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="New Siding in Cedar Falls, IA">
-                <img src="/images/work/siding/Siding_1.jpg" alt="Siding Blue House">
-                <img src="/images/work/siding/Siding_2.png" alt="Siding Beige House">
-                <img src="/images/work/siding/Siding_3.jpg" alt="Siding Tan House">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="New Siding in Cedar Falls, IA">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Siding Blue House">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Siding Beige House">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Siding Tan House">
               </div>
             </div>
           </div>
@@ -118,7 +118,7 @@
             <div class="our-work-accordion" data-accordion>
               <div data-control>Shed Houses "Shouses"</div>
               <div data-content>
-                <img src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Farm Shed">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Farm Shed">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/shed-loft.png" alt="Shed Loft">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/red-shed.png" alt="Red Shed">
               </div>
@@ -126,16 +126,16 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Agricultural & Commercial Buildings</div>
               <div data-content>
-                <img src="/images/work/commercial/7.png" alt="Agricultural Building">
-                <img src="/images/work/commercial/9.png" alt="Agricultural Building">
-                <img src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/farm-shed.png" alt="Farm Shed">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Agricultural Building">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Agricultural Building">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/farm-shed.png" alt="Farm Shed">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Event Venues</div>
               <div data-content>
-                <img src="/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-1.png" alt="Event Venue 1">
-                <img src="/images/work/event-venues/event-venue-2.png" alt="Event Venue 2">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-1.png" alt="Event Venue 1">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Event Venue 2">
               </div>
             </div>
           </div>
