fix broken images

--- a/our-work.html
+++ b/our-work.html
@@ -38,7 +38,7 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Basement Renovations</div>
               <div data-content>
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Basement Renovation">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/Stairs-Inside.jpg" alt="Basement Renovation">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Basement Renovation Flooring and Stairs">
               </div>
             </div>
