fix broken images

--- a/our-work.html
+++ b/our-work.html
@@ -82,30 +82,30 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Decks</div>
               <div data-content>
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="New Deck Renovation">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1561120026449_1561119976123_img_0390.jpg" alt="New Deck Renovation">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1.JPG" alt="Overhead View of Deck">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Porch Deck">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Night View of Deck">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Roofing_1.jpg" alt="Large Backyard Multilevel Deck">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/IMG_0574.JPG" alt="Porch Deck">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Night View of Deck">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/team-builders-deck.png" alt="Large Backyard Multilevel Deck">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Pergolas</div>
               <div data-content>
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Wood Home Pergola">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p1.jpg" alt="Wood Home Pergola">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Pergola with Shingles">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Wood Home Pergola">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Pergola with Metal Base">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Pergola with Metal Base">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p12.jpg" alt="Wood Home Pergola">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p19.jpg" alt="Pergola with Metal Base">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p20.jpg" alt="Pergola with Metal Base">
               </div>
             </div>
             <div class="our-work-accordion" data-accordion>
              <div data-control>Siding</div>
               <div data-content>
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="New Siding in Cedar Falls, IA">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Siding Blue House">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Siding Beige House">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Siding Tan House">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_1.jpg" alt="Siding Blue House">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_2.jpg" alt="Siding Beige House">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_3.jpg" alt="Siding Tan House">
               </div>
             </div>
           </div>
@@ -126,8 +126,8 @@
             <div class="our-work-accordion" data-accordion>
              <div data-control>Agricultural & Commercial Buildings</div>
               <div data-content>
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Agricultural Building">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Agricultural Building">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/7.png" alt="Agricultural Building">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/9.png" alt="Agricultural Building">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/farm-shed.png" alt="Farm Shed">
               </div>
             </div>
@@ -135,7 +135,7 @@
              <div data-control>Event Venues</div>
               <div data-content>
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-1.png" alt="Event Venue 1">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p10.jpg" alt="Event Venue 2">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/event-venues/event-venue-2.png" alt="Event Venue 2">
               </div>
             </div>
           </div>
