--- a/our-work.html
+++ b/our-work.html
@@ -104,7 +104,7 @@
               <div data-content>
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png" alt="New Siding in Cedar Falls, IA">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_1.jpg" alt="Siding Blue House">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_2.jpg" alt="Siding Beige House">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_2.png" alt="Siding Beige House">
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_3.jpg" alt="Siding Tan House">
               </div>
             </div>
@@ -135,7 +135,7 @@
              <div data-control>Event Venues</div>
               <div data-content>
                 <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-1.png" alt="Event Venue 1">
-                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/event-venues/event-venue-2.png" alt="Event Venue 2">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-2.png" alt="Event Venue 2">
               </div>
             </div>
           </div>
