fix broken links

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <p style="">Our home remodeler should be the top choice for your home renocation project. With more than a decade of experience, the crew at TEAM Builders LTD has what it takes to transform your current house into your dream home. There is no project too big or too small for us.</p>
       <p>Call 319-481-8326 now to discuss your design ideas with a skilled remodeling contractor in Cedar Falls, IA</p>
       <br />
-      <a href="/our-process.html" class="btn btn-primary">Our Process</a>
+      <a href="/process.html" class="btn btn-primary">Our Process</a>
     </div>
     <div class="below-main-content-image">
       <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/our-process.png" alt="Our Process">
@@ -213,7 +213,7 @@
         Learn more about our rewards program
       </span>
       <div class="triangle"></div>
-      <a class="btn btn-secondary">Learn More</a>
+      <a href="/referral.html" class="btn btn-secondary">Learn More</a>
     </div>
   </section>
   <section id="contactus">
