--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Shed Houses">
         </div>
       </div>
-      <div class="service-card mr-20">
+      <div class="service-card">
         <div class="service-card-header">
           <h3><a href="/shed-homes-shouses.html">Shed Houses</a></h3>
         </div>
