--- a/index.html
+++ b/index.html
@@ -152,56 +152,56 @@
       <div class="testimonials">
         <div class="testimonial">
           <div class="quote">
-            <h2>Elon Musk</h2>
+            <h2></h2>
             <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
           </div>
           <p>
-          Can you make it faster? I think we need to start from scratch. Can my website be in english? can we have another option. I cant pay you is this the best we can do this red is too red. Try a more powerful colour make it look like Apple, nor will royalties in the company do instead of cash.
+            First off, I never leave a review but this time is different because of the excellent service I received from Trevor, Kent, and Don and their crews. I had extensive concrete work done as well as a new deck built, and additional landscaping. I can not stress how happy I am with how it all turned out as well as the flexibility to add some additional work while the crews were here... THANK YOU TEAM BUILDERS..You have an exceptional team, integrity,  and will be contacting you again with my next big project.
           </p>
         </div>
         <div class="testimonial">
           <div class="quote">
-            <h2>King George III</h2>
+            <h2></h2>
             <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
           </div>
           <p>
-          Can you make it faster? I think we need to start from scratch. Can my website be in english? can we have another option. I cant pay you is this the best we can do this red is too red. Try a more powerful colour make it look like Apple, nor will royalties in the company do instead of cash.
+            We had the best experience! They provided us with the deck of our dreams and for that we are so grateful. Austin and Trevor are an excellent team and they make the process easy and seamless. We would absolutely use their services again.
           </p>
         </div>
         <div class="testimonial">
           <div class="quote">
-            <h2>Austin Maginnis</h2>
+            <h2></h2>
             <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
           </div>
           <p>
-          I know I work here, but this place is just great.
+            T.E.A.M Builders exceeded our expectations when it came to timing, quality, craftmanship and customer service regarding our composite deck the built from scratch. Any issue was solved rapidly and communication was a breeze. I would recommend them for any project, big or small! You guys rock!
           </p>
         </div>
         <div class="testimonial">
           <div class="quote">
-            <h2>Batman</h2>
+            <h2></h2>
             <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
           </div>
           <p>
-          Can you make it faster? I think we need to start from scratch. Can my website be in english? can we have another option. I cant pay you is this the best we can do this red is too red. Try a more powerful colour make it look like Apple, nor will royalties in the company do instead of cash.
+            Amazing work and very professional I had zero complaints! Austin and his crew transformed my deck into an outdoor oasis. I would highly recommend them for any future projects and anyone in the Cedar Falls area.
           </p>
         </div>
         <div class="testimonial">
           <div class="quote">
-            <h2>Ted Mosby</h2>
+            <h2></h2>
             <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
           </div>
           <p>
-          Can you make it faster? I think we need to start from scratch. Can my website be in english? can we have another option. I cant pay you is this the best we can do this red is too red. Try a more powerful colour make it look like Apple, nor will royalties in the company do instead of cash.
+            I contacted Team Builders to do a roof replacement on my newly purchased home. They got the estimate to me within a couple hours, explained everything to me and were able to schedule the repair super quickly! The price is extremely competitive and they only use the highest quality of materials! They were able to get my roof done in one day - and the roof looks amazing! Every interaction I had with them was great! I won’t trust anyone else to do my home repairs!
           </p>
         </div>
         <div class="testimonial">
           <div class="quote">
-            <h2>Bill Murray</h2>
+            <h2></h2>
             <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/testimonial-quote.png">
           </div>
           <p>
-          Can you make it faster? I think we need to start from scratch. Can my website be in english? can we have another option. I cant pay you is this the best we can do this red is too red. Try a more powerful colour make it look like Apple, nor will royalties in the company do instead of cash it. Much good business very fine labor.
+            This team is absolutely awesome. They were very thorough and verified everything before moving forward. They made sure we were satisfied with all items. They even came back quickly to add Lattice upon my request. Let me just say, my deck looks 100% better than it did before they started. I am absolutely amazed at the finished work. I highly, highly recommend T.E.A.M. Builders
           </p>
         </div>
       </div>
