--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
   <nav id="navbar"></nav>
   <div class="covid-accordion alert" data-accordion>
-  <a href="tel:3194818326" class="mobile-tel"><i class="fas fa-phone"></i> (319) 481-8326</a>
+  <a href="tel:3194818326" class="mobile-tel"><i class="fa fa-phone"></i> (319) 481-8326</a>
   <div data-control><p class="accordion-toggle">We're open for business! Learn more about our COVID-19 procedures and protocols.</p></div>
   <div data-content>
     <p class="strong">We're open for business!</p>
