mailchimp form styling

--- a/index.html
+++ b/index.html
@@ -20,14 +20,8 @@
   <nav id="navbar"></nav>
   <div class="covid-accordion alert" data-accordion>
   <a href="tel:3194818326" class="mobile-tel"><i class="fa fa-phone"></i> (319) 481-8326</a>
-  <div data-control><p class="accordion-toggle">Sign up </p></div>
+  <div data-control><p class="accordion-toggle">Discover Trends, Ideas, Inspiration &amp; Products</p></div>
   <div data-content>
-    <!-- <p class="strong">We're open for business!</p>
-    <p>Safety is our first priority and shared value with our customers and vendors. Out of an abundance of caution, we have taken the following steps to address COVID-19:</p>
-    <p class="strong">Office Procedures</p>
-    <p>Our office will be closed to the general public. Sales will be conducted via phone. Sales consultations will be done via appointment only. During the appointment, we will adopt a no touch, no handshake policy.</p>
-    <p class="strong">Field Operations</p>
-    <p style="margin-bottom: 10px;">We will adopt a no touch, no handshake policy for all field operations. Customers are not to touch or handle any paperwork. We will ask for electronic signatures or verbal agreements from our customers.</p> -->
     <div id="mc_embed_signup">
         <form action="https://teambuilderslimited.us2.list-manage.com/subscribe/post?u=3505b437145ee33b184d2b30a&amp;id=5ee4451a83" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
@@ -35,7 +29,7 @@
         <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3505b437145ee33b184d2b30a_5ee4451a83" tabindex="-1" value=""></div>
-            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-secondary"></div>
             </div>
         </form>
         </div>
