mailchimp form styling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <nav id="navbar"></nav>
   <div class="covid-accordion alert" data-accordion>
   <a href="tel:3194818326" class="mobile-tel"><i class="fa fa-phone"></i> (319) 481-8326</a>
-  <div data-control><p class="accordion-toggle">Discover Trends, Ideas, Inspiration &amp; Products</p></div>
+  <div data-control><p class="accordion-toggle">Trends, Ideas, Inspiration &amp; Products from T.E.A.M. Builders</p></div>
   <div data-content>
     <div id="mc_embed_signup">
         <form action="https://teambuilderslimited.us2.list-manage.com/subscribe/post?u=3505b437145ee33b184d2b30a&amp;id=5ee4451a83" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -39,6 +39,7 @@
     <div id="hero-text">
       <h1>Ready to Renovate Your House?</h1>
       <h2>GET IN TOUCH WITH TEAM BUILDERS LTD NOW</h2>
+      <a href="tel:3194818326" class="btn btn-primary">Call Now</a>
     </div>
     <div id="main-content-service-selector-wrapper">
       <div id="main-content-service-selector">
