--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <form action="https://teambuilderslimited.us2.list-manage.com/subscribe/post?u=3505b437145ee33b184d2b30a&amp;id=5ee4451a83" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
         <label for="mce-EMAIL">Discover Trends, Ideas, Inspiration &amp; Products</label>
-        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email address" required>
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3505b437145ee33b184d2b30a_5ee4451a83" tabindex="-1" value=""></div>
             <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-secondary"></div>
@@ -120,7 +120,7 @@
           <h3><a href="#">Home Additions</a></h3>
         </div>
         <div class="service-card-image">
-          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png" alt="Shed Houses">
+          <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/home-additions/home+additions.JPG" alt="Home Additions">
         </div>
       </div>
       <div class="service-card">
