add meta descriptions to pages

--- a/interior-remodeling.html
+++ b/interior-remodeling.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="https://teambuilders-media.s3.us-east-2.amazonaws.com/favicon.png">
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="description" content="Home Remodeling Contractor in Cedar Falls, IA">
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
   </head>
   <body>
@@ -52,9 +53,8 @@
           <br />
           <h4 class="h1">Our Work</h4>
           <div class="our-work-images">
-            <img class="our-work-image" src="/images/work/basement-renovations/basement-renovation.png" alt="Basement Renovation">
-            <!-- <img class="our-work-image" src="/images/work/bathroom-renovations/bathroom-2.png" alt="Bathroom Renovation"> -->
-            <img class="our-work-image" src="/images/work/kitchen-renovations/kitchen-renovation-island.jpg" alt="New Kitchen Renovation with Island">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg" alt="Basement Renovation">
+            <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpeg" alt="New Kitchen Renovation with Island">
             <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/TEAM2.jpg" alt="New Kitchen Renovation">
           </div>
       </div>
