--- a/exterior-remodeling.html
+++ b/exterior-remodeling.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="https://teambuilders-media.s3.us-east-2.amazonaws.com/favicon.png">
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta name="description" content="Home Remodeling Contractor in Cedar Falls, IA">
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
   </head>
   <body>
@@ -51,7 +52,7 @@
               </div>
           </div>
           <div class="col">
-            <img src="/images/work/decks/1561120026449_1561119976123_img_0390.jpg">
+            <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/1561120026449_1561119976123_img_0390.jpg">
           </div>
         </div>
           <br />
