--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
+    <meta name="description" content="Home Remodeling Contractor in Cedar Falls, IA">
+    <meta name="keywords" content="home remodeling cedar falls, home remodeling cedar valley, t.e.a.m. builders cedar falls">
     <meta property "og:image" content="https://teambuilders-media.s3.us-east-2.amazonaws.com/team-builders-logo.png" />
     <meta property "og:image:type" content="/image/png" />   
     <meta property "og:image:width" content="250" />  
