--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
      <div id="main-content-service-cards-new-construction" class="hidden">
       <div class="service-card mr-20">
         <div class="service-card-header">
-          <h3><a href="#">Home Additions</a></h3>
+          <h3><a href="/interior-remodeling.html">Home Additions</a></h3>
         </div>
         <div class="service-card-image">
           <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/home-additions/home+additions.JPG" alt="Home Additions">
